--- a/clicker_universe_be/appsettings.Development.json
+++ b/clicker_universe_be/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "RefreshTokenTTL": 2
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-QLVI9N2\\SQLEXPRESS;Database=clicker_universe_prototype;Trusted_Connection=True;"
   }
 }
