--- a/clicker_universe_be/appsettings.json
+++ b/clicker_universe_be/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "RefreshTokenTTL": 2
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-QLVI9N2\\SQLEXPRESS;Database=clicker_universe_prototype;Trusted_Connection=True;"
+  }
 }
